# mesos_challenge

./: CMakeLists.txt  README.md
include/: job.h  mesos.h  resource.h  scheduler.h
src/lib/: mesos.cpp  scheduler.cpp
src/prog/: mesos_exec.cpp
